abovevtt.css
/* ... */
@keyframes beholder-float {
    0% { transform: translate(0,  0px); }
    50%  { transform: translate(0, -20px); }
    100%   { transform: translate(0, -0px); }   
}

div.sidebar__pane-content div.tooltip::after {
    background: none !important;
}

.elev svg{
    left: -7px;
    position: absolute;
}

.elev{
    pointer-events: none;
    z-index: 1;
}
.token img:not(.note-condition):not(.condition-img), .token [data-img], .token .token-image{
    pointer-events:none !important;
}

.set-conditions-button .tooltip-hover,
.remove-conditions-button .tooltip-hover{
    pointer-events:none;
}
button.avtt-roll-button,
.avtt-ability-roll-button {
    /* lifted from DDB encounter stat blocks  */
    color: #b43c35;
    border: 1px solid #b43c35;
    border-radius: 4px;
    background-color: #fff;
    white-space: nowrap;
    font-size: 14px;
    font-weight: 600;
    font-family: Roboto Condensed,Open Sans,Helvetica,sans-serif;
    line-height: 18px;
    letter-spacing: 1px;
    padding: 1px 4px 0;
}
.ct-sidebar__portal{
    overflow: unset !important;
    z-index: 57000 !important;
}
.ct-sidebar__portal>[role='presentation'] .MuiPopover-paper{
    width: fit-content;
    padding:0px;
}

.ct-sidebar__portal>[role='presentation'] .MuiPopover-paper ul{
    padding:10px;
}
body>[role='presentation'] .MuiPopover-paper{
    width: fit-content;
    padding:0px;
}

button.avtt-roll-formula-button {
    font-size: 14px;
    cursor: default;
    color: #394B59;
    padding: 9px;
}
.abovevtt-slash-command-journal button {
    color: #b43c35;
    border: 1px solid #b43c35;
    border-radius: 4px;
    background-color: #fff;
    white-space: nowrap;
    font-size: 14px;
    font-weight: 600;
    font-family: Roboto Condensed,Open Sans,Helvetica,sans-serif;
    line-height: 18px;
    letter-spacing: 1px;
    padding: 1px 4px 0;
}
.MuiPaper-root:not(.MuiAlert-root) {
    padding: 0px 16px;
    width: 100px;
    pointer-events: auto;
}

.MuiListItemText-root {
    flex: 1 1 auto;
    min-width: 0;
    margin-top: 4px;
    margin-bottom: 4px;
}
.MuiButtonBase-root {
    width: 100%;
}

.MuiModal-root,
div#selectedTokensBorder,
div#selectedTokensBorderRotationGrabberConnector,
#sounds-panel .volume-control {
    width: 50%;
    float: right;
}

#sounds-panel .channel-progress-bar-total {
    width: 100%;
    position: relative;
    height: 1px;
    bottom: 4px;
    left: 0px;
    background: lightgray;
}

#sounds-panel .channel-progress-bar-progress {
    width: 0%;
    position: relative;
    height: 1px;
    bottom: 0px;
    left: 0px;
    background: #0075FF;
}

#sounds-panel .sidebar-panel-header {
    padding: 4px;
    border-bottom: 1px solid #2b2b2b;
}

#sounds-panel .audio-row  {
    height: 25px;
}

#track-list li:hover {
    background-color:lightskyblue;
}

#track-list button {
    float: right;
    height: 100%;
}

.sidebar-panel-footer button.custom-stat-buttons{
   appearance: none;
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: 1px;
    background: #1b9af0;
    border: none;
    color: #fff;
    align-self: stretch;
    margin: 4px 0px 4px 0px;
    padding: 10px;
    width: 100%;
    flex-grow: 0;
    font-size: 16px;
    color: #fff;
}


.ability-block {
    font-size: 14px;
    display: flex;
    flex-wrap: wrap;
    margin: 10px 0;
    color: #4f1300;
}
.ability-block__stat {
    width: 30%;
    padding: 5px 0;
    text-align: center;
}

.ability-block__heading {
    font-weight: bold;
}

.ability-block__data {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

.ability-block__modifier {
    margin-left: 2px;
}
.mon-stat-block__meta {
    font-style: italic;
    margin-bottom: 15px;
}
.mon-stat-block__name {
    color: #822000;
    font-family: MrsEavesSmallCaps,Roboto,Open Sans,Helvetica,sans-serif;
    font-size: 34px;
    font-weight: 700;
}
.mon-stat-block__attribute, .mon-stat-block__feature {
    color: #822000;
    line-height: 1.2;
    margin: 5px 0;
}
.mon-stat-block__name .mon-stat-block__name-link, 
.mon-stat-block__name .mon-stat-block__name-link:active, 
.mon-stat-block__name .mon-stat-block__name-link:hover, 
.mon-stat-block__name .mon-stat-block__name-link:visited {
    color: #822000;
}
.mon-stat-block__attribute-label, 
.mon-stat-block__feature-label{
        font-weight: 700;
}
#VTT{
	z-index:2;
    transform: scale(var(--window-zoom));
}
.mon-stat-block{
    padding: 15px 10px;
}
.more-info footer{
    padding: 0px;
}
.mon-stat-block{
    padding: 15px 10px;
  
}
.ddbc-creature-block__name {
    font-size: 30px;
}
.monster-details .more-info footer{
    padding: 0px;
    height: 20px;
}

.monster-details .more-info footer .source.monster-source {
    font-size: inherit;
    font-family: inherit;
    font-style: inherit;
    margin-top: 0px;
    float:left;
}
.monster-details .more-info.details-more-info:after {
    display:none
}
.monster-details .more-info-content{
    padding: 0px !important;
}
.monster-details,
.detail-content .image{
    margin-bottom:0px;
}
.top_menu.visible,
.ddbc-tab-options--layout-pill{
	z-index: 57000;
}

/*combat tracker face lift*/
/* Also used in resize can remove if that goes in*/
#combat_footer,
#combat_tracker_inside{
    border-style: solid;
    border-color: #ddd; 
}
#combat_footer{
    border-width: 0px 1px 1px 1px;
    border-radius: 0px 0px 5px 5px; 
    left: -1px;
    right: -1px;
    position: absolute;
}

#combat_footer button{
    flex-grow: 1;   
}
#combat_footer{
    display: flex;   
}
#combat_tracker_inside {
    border-width: 1px 1px 0px 1px;
    border-radius: 5px 5px 0 0;
}
.body-rpgcharacter-sheet #combat_tracker_inside{
    width: 200px;   
}
#combat_tracker_inside #combat_footer button:last-of-type{
    border-bottom-right-radius: 5px;   
}
#combat_tracker_inside #combat_footer button:first-of-type{
    border-bottom-left-radius: 5px; 
}

.body-rpgcharacter-sheet #combat_tracker_inside{
    border-radius: 5px;
}
/* ... */

